--- a/app/templates/public_pricing.html
+++ b/app/templates/public_pricing.html
@@ -1,6 +1,6 @@
 {% extends "base_auth.html" %}
 
-{% block title %}{{ _('Subscription Plans') }} - TRXCK{% endblock %}
+{% block title %}{{ _('Subscription Plans') }} - TRXCKER{% endblock %}
 
 {% block styles %}
 {{ super() }}
