Fix hardcoded clinic name references in templates and JavaScript
- Replace 'CostaSpine Clinic' with dynamic current_user.clinic_name in:
  - new_treatment_page.html JavaScript location check
  - edit_treatment.html JavaScript location check
  - new_recurring_appointment.html location card
  - edit_recurring_appointment.html location card
  - calendar.html appointment location options
  - index.html appointment location options
  - patient_detail.html bulk action button
- Fix add_treatment route default location to use clinic_name setting
- Update bulk update validation to use dynamic clinic name

This ensures clinic revenue/fees will be tracked properly based on user's clinic settings

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -79,7 +79,7 @@
                      <div class="mb-3">
                         <label for="appointmentLocation" class="form-label">{{ _('Location') }}</label>
                         <select class="form-select" id="appointmentLocation" name="location">
-                            <option value="CostaSpine Clinic" selected>{{ _('CostaSpine Clinic') }}</option>
+                            <option value="{{ current_user.clinic_name }}" selected>{{ current_user.clinic_name }}</option>
                             <option value="Home Visit">{{ _('Home Visit') }}</option>
                             <option value="Online">{{ _('Online') }}</option>
                         </select>
@@ -171,7 +171,7 @@
                     // Reset other fields
                     document.getElementById('appointmentPatient').value = '';
                     document.getElementById('appointmentTreatmentType').value = '';
-                    document.getElementById('appointmentLocation').value = 'CostaSpine Clinic';
+                    document.getElementById('appointmentLocation').value = '{{ current_user.clinic_name }}';
                     document.getElementById('appointmentNotes').value = '';
 
                     var newAppointmentModal = new bootstrap.Modal(document.getElementById('newAppointmentModal'));
