--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -370,7 +370,7 @@
                          <div class="mb-3">
                             <label for="appointmentLocation" class="form-label">{{ _('Location') }}</label>
                             <select class="form-select" id="appointmentLocation" name="location">
-                                <option value="CostaSpine Clinic" selected>{{ _('CostaSpine Clinic') }}</option>
+                                <option value="{{ current_user.clinic_name }}" selected>{{ current_user.clinic_name }}</option>
                                 <option value="Home Visit">{{ _('Home Visit') }}</option>
                                 <option value="Online">{{ _('Online') }}</option>
                             </select>
