--- a/app/templates/new_recurring_appointment.html
+++ b/app/templates/new_recurring_appointment.html
@@ -59,7 +59,7 @@
                             <label class="form-label">Default Location (Optional)</label>
                             <div class="row g-2">
                                 <div class="col">
-                                    <div class="location-card card card-body text-center" data-location="CostaSpine Clinic"> <i class="bi bi-hospital fs-1 mb-2"></i> <div>CostaSpine Clinic</div> </div>
+                                    <div class="location-card card card-body text-center" data-location="{{ current_user.clinic_name }}"> <i class="bi bi-hospital fs-1 mb-2"></i> <div>{{ current_user.clinic_name }}</div> </div>
                                 </div>
                                 <div class="col">
                                     <div class="location-card card card-body text-center" data-location="Home Visit"> <i class="bi bi-house-door fs-1 mb-2"></i> <div>Home Visit</div> </div>
